agent-platform/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-dispatch
spec:
  selector:
    app: argo-dispatch
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  type: ClusterIP
